used css to fix alignment issues with textarea and added and aligned image

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -81,6 +81,17 @@
     padding: 150px;
     box-sizing: border-box;
     margin: 200px;
+    margin-top: 0%;
+}
+
+img{
+    padding: 15px;
+    box-sizing: border-box;
+    width: 50%;
+    border: 2px;
+    border-radius: 2px;
+    max-width: 20%;
+    border-radius: 80%;
 }
 
 #fname{
@@ -108,7 +119,7 @@ body{
 .create textarea{
     padding: 15px;
     box-sizing: border-box;
-    width: 100%;
+    width: 50%;
     border: 2px;
     border-radius: 2px;
 }
@@ -121,19 +132,18 @@ body{
     flex: 1;
     padding: 10px;
     border-radius: 2px;
-    width: 200px;
+    max-width: 300px;
     background-color: #e0def4;
     text-align: center;
-    margin-right: 20px;
+    margin-right: 50px;
 }
 
 #button2{
     flex: 2;
-    padding: 10px;
+    padding: 1px;
     border: 2px;
-    width: 200px;
+    max-width: 252px;
     background-color: #e0def4;
     text-align: center;
 }
 
-/* Input Positioning */
